--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TestAppOfferWall</string>
     <string name="send_request">Send request</string>
     <string name="clear_attribute">Clear attribute</string>
+    <string name="exit">Exit</string>
 </resources>
